--- a/sales/templates/home_page.html
+++ b/sales/templates/home_page.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BookSales UniBG</title>
-</head>
-<body>
+{%  extends 'base.html' %}
 
-</body>
-</html>
+    {% block content %}
+    <h1>Homepage!</h1>
+    {% endblock content %}
